--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "element-ui": "^2.4.5",
+    "express": "^5.0.0-alpha.8",
+    "mongoose": "^5.12.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
